--- a/roelof.css
+++ b/roelof.css
@@ -18,4 +18,47 @@ body {
     display: flex;
     flex-direction: column;
     font-size: 15px;
+    font-family: 'League Spartan', sans-serif;
+    background-color: var(--white);
+    background-image: url("./images/bg-pattern-top-mobile.svg") , url("./images/bg-pattern-bottom-mobile.svg");
+    background-repeat: no-repeat;
+    background-position: top 0vh left 20vh, bottom -110vh left 0vh; 
+}
+
+h1{
+    color: var(--magenta);
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-bottom: 20px;  
+}
+
+.container{
+    margin-top: 80px;
+    text-align: center; 
+    width: 325px;
+}
+
+.tekst p {
+    color: var(--grayish-magenta);
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-bottom: 30px;   
+}
+
+.rating{
+    background-color: var(--light_grayish_magenta);
+    margin-left: 30px;
+    margin-bottom: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 10px;     
+}
+
+.rating_stars{
+    margin-bottom: 10px; 
+}
+
+.rating p{
+    color: var(--magenta);
+    font-weight: 700;  
 }
