--- a/roelof.css
+++ b/roelof.css
@@ -13,8 +13,7 @@
 }
 
 body {
-    width: 100vh;
-    height: 100vw;
+    min-height: 100 vh; 
     display: flex;
     flex-direction: column;
     font-size: 15px;
@@ -22,7 +21,7 @@ body {
     background-color: var(--white);
     background-image: url("./images/bg-pattern-top-mobile.svg") , url("./images/bg-pattern-bottom-mobile.svg");
     background-repeat: no-repeat;
-    background-position: top 0vh left 20vh, bottom -110vh left 0vh; 
+    background-position: top left, bottom right; 
 }
 
 h1{
