--- a/roelof.css
+++ b/roelof.css
@@ -61,3 +61,49 @@ h1{
     color: var(--magenta);
     font-weight: 700;  
 }
+
+.review{
+    margin-left: 30px;
+    background-color: var(--magenta);
+    margin-bottom: 10px;
+    border-radius: 10px;
+    text-align: left;    
+}
+
+.review img{
+    border-radius: 50%;
+    width: 42px;
+    height: 42px;
+    margin-left: 30px;
+    margin-top: 40px;  
+}
+
+.personal{
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 20px;  
+}
+
+.personal_data{
+    display: flex;
+    flex-direction: column;
+    margin-top: 40px;
+    margin-left: 10px;   
+}
+
+.name {
+    color: var(--white);
+}
+
+.buyer {
+    color: var(--pink); 
+}
+
+.text{
+    color: var(--white);
+    margin-left: 30px;
+    margin-right: 30px;
+    padding-bottom: 30px;
+    line-height: 1.5;
+    letter-spacing: 0.01px;     
+}
