--- a/roelof.css
+++ b/roelof.css
@@ -115,13 +115,14 @@ h1{
        flex-direction: row;
        background-image: url("./images/bg-pattern-top-desktop.svg") , url("./images/bg-pattern-bottom-desktop.svg");
        background-repeat: no-repeat;
-       background-position: top left, bottom center;
+       background-position: top left, bottom right;
        padding-left: 150px;  
     }
 
     h1{
-        padding-left: 0px;
-        font-size: 5em; 
+        padding-left: 25px;
+        font-size: 3em;
+        padding-right: 20px;  
     }
 
     .container{
@@ -136,24 +137,50 @@ h1{
     }
 
     .tekst{
-        width: 600px;
+        flex: 1; 
+    }
+
+    .tekst p{
+        font-size: 25px;
+        margin-right: 10px;
+        color: var(--grayish-magenta);  
     }
 
     .ratings{
-        width: 800px;
+        display: flex;
+        flex-direction: column; 
+        flex: 1;
+        gap: 15px;
+        margin-top: 10px; 
     }
 
-    
+    .ratings > :nth-child(2){
+       align-self: center; 
+    }
+
+    .ratings > :nth-child(3){
+        align-self: flex-end; 
+    }
+
     .rating{
         padding-left: 40px; 
         padding-right: 40px;
         width: 450px;
         display: flex; 
-        flex-direction: row;   
+        flex-direction: row;
+        justify-content: center; 
+        align-content: center;   
+    }
+
+    .rating > * {
+        padding-top: 10px;
+        padding-bottom: 10px; 
     }
 
     .rating_stars{
-        margin-right: 30px; 
+        margin-right: 30px;
+        margin-bottom: 0px;
+        
     }
 
     .reviews{
