--- a/roelof.css
+++ b/roelof.css
@@ -26,20 +26,17 @@ body {
 
 h1{
     color: var(--magenta);
-    padding-left: 40px;
     padding-right: 40px;
     margin-bottom: 20px;  
 }
 
 .container{
-    margin-top: 80px;
     text-align: center; 
     width: 325px;
 }
 
 .tekst p {
     color: var(--grayish-magenta);
-    padding-left: 30px;
     padding-right: 30px;
     margin-bottom: 30px;   
 }
@@ -63,7 +60,6 @@ h1{
 }
 
 .review{
-    margin-left: 30px;
     background-color: var(--magenta);
     margin-bottom: 10px;
     border-radius: 10px;
@@ -112,28 +108,29 @@ h1{
 
     body{
        display: flex;
-       flex-direction: row;
+       /* flex-direction: row; */
        background-image: url("./images/bg-pattern-top-desktop.svg") , url("./images/bg-pattern-bottom-desktop.svg");
        background-repeat: no-repeat;
-       background-position: top left, bottom right;
-       padding-left: 150px;  
+       background-position: top left, bottom right  ;
+       align-items: center; 
+       justify-content: center; 
     }
 
     h1{
-        padding-left: 25px;
-        font-size: 3em;
+        font-size: 4em;
         padding-right: 20px;  
     }
 
     .container{
-        width: 1400px;
+        width: 1200px;
         text-align: left;
-        margin-top: 100px;   
+        margin-left: 100px;
+        margin-right: 100px; 
     }
 
     .top{
         display: flex; 
-        flex-direction: row;
+        /* flex-direction: row; */
     }
 
     .tekst{
@@ -143,7 +140,7 @@ h1{
     .tekst p{
         font-size: 25px;
         margin-right: 10px;
-        color: var(--grayish-magenta);  
+        color: var(--grayish-magenta);
     }
 
     .ratings{
@@ -169,12 +166,17 @@ h1{
         display: flex; 
         flex-direction: row;
         justify-content: center; 
-        align-content: center;   
+        align-content: center;
+        margin-bottom: 5px;    
     }
 
     .rating > * {
-        padding-top: 10px;
-        padding-bottom: 10px; 
+        padding-top: 5px;
+        padding-bottom: 8px;  
+    }
+
+    .rating p {
+        font-size: 18px; 
     }
 
     .rating_stars{
@@ -185,12 +187,24 @@ h1{
 
     .reviews{
         display: flex; 
-        flex-direction: row;
+        /* flex-direction: row; */
+        justify-content: center;
+        margin-top: 50px;
+        margin-bottom: 50px;  
+        height: 40vh;
+    }
+    
+    .review{
+        width: 380px;
+        height: 245px;
+        padding: 0px 5px; 
+    }
+    
+    .name, .buyer, .text {
+        font-size: 18px; 
     }
 
-    .review{
-        width: 320px;
-        }
+    
 
     
 }
