--- a/roelof.css
+++ b/roelof.css
@@ -13,9 +13,11 @@
 }
 
 body {
-    min-height: 100vh; 
+    min-height: 100vh;
+    min-width: 100vw;  
     display: flex;
-    flex-direction: column;
+    justify-content: center; 
+    align-content: center;
     font-size: 15px;
     font-family: 'League Spartan', sans-serif;
     background-color: var(--white);
@@ -31,8 +33,11 @@ h1{
 }
 
 .container{
+    margin-top: 40px; 
     text-align: center; 
     width: 325px;
+    display: flex;
+    flex-direction: column;  
 }
 
 .tekst p {
@@ -188,10 +193,11 @@ h1{
     .reviews{
         display: flex; 
         /* flex-direction: row; */
-        justify-content: center;
+        /*justify-content: center; */
         margin-top: 50px;
         margin-bottom: 50px;  
         height: 40vh;
+        gap: 30px; 
     }
     
     .review{
@@ -199,7 +205,17 @@ h1{
         height: 245px;
         padding: 0px 5px; 
     }
+
+    .reviews > :nth-child(2){
+        align-self: center; 
+    }
+
+    .reviews > :nth-child(3) {
+        align-self: end;  
+    }
+
     
+
     .name, .buyer, .text {
         font-size: 18px; 
     }
